# xtu-os

./: .gitignore  .~lock.os实验-计算机 -2025.ppt#  CMakeLists.txt  char.sh  readme.md  test.py
assets/: os实验-计算机 -2025.ppt
lab1/: README.md
lab1/code/: create.c  pipe.c  test.c
lab2/: README.md  banker  banker.cpp  test.cpp
reports/: template.md
reports/lab1/: README.md  lab1.md
reports/lab2/: README.md  lab2.md
reports/lab3/: README.md  lab3.md
reports/lab4/: README.md  lab4.md
src/include/lab2/: banker.h
src/include/lab3/: MemoryAlloc.h
src/include/lab4/: PageReplacer.h  Page_Replacer.h
src/lab1/: CMakeLists.txt  control.c  signal.c
src/lab2/: CMakeLists.txt  banker.cpp
src/lab3/: CMakeLists.txt  MemoryAlloc.cpp  test.cpp
src/lab4/: CMakeLists.txt  PageReplacer.cpp  Page_Replacer.cpp
test/: CMakeLists.txt
test/lab2/: banker_test.cpp  test.cpp
test/lab3/: MemoryAlloc_test.cpp
test/lab4/: PageReplacer_test.cpp
